create subtract, multiply, and divide buttons.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           <label for="add2">2nd number</label>
           <input id="add2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Add!</button>
+        <button class="btn" id="add">Add!</button>
+        <button class="btn" id="subtract">Subtract!</button>
+        <button class="btn" id="multiply">Multiply!</button>
+        <button class="btn" id="divide">Divide!</button>
+
       </form>
       <div id="output">
 
