--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <input id="add1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number</label>
+          <label for="add2">2nd number:</label>
           <input id="add2" class="form-control" type="text">
         </div>
         <button class="btn" id="add">Add!</button>
@@ -25,6 +25,7 @@
         <button class="btn" id="divide">Divide!</button>
 
       </form>
+      <h3>Answer</h3>
       <div id="output">
 
       </div>
