--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
         </div>
-        <button class="btn" id="add">Add!</button>
-        <button class="btn" id="subtract">Subtract!</button>
-        <button class="btn" id="multiply">Multiply!</button>
-        <button class="btn" id="divide">Divide!</button>
-
+        <div class="radio">
+          <label><input type="radio" name="operator" value="add">add</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="operator" value="subtract">subtract</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="operator" value="multiply">multiply</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="operator" value="divide">divide</label>
+        </div>
+        <button class="btn">Go!</button>
       </form>
       <h3>Answer</h3>
       <div id="output">
